# multi-host-ros

docker_test/: Dockerfile  entrypoint.sh
docker_test/ws_multi/install/pose_demo/lib/pose_demo/: pose_publisher
docker_test/ws_multi/install/pose_demo/share/pose_demo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
docker_test/ws_multi/install/pose_demo/share/pose_demo/cmake/: pose_demoConfig.cmake
docker_test/ws_multi/log/: latest_build
docker_test/ws_multi/src/pose_demo/: CMakeLists.txt
docker_test/ws_multi/src/pose_demo/src/: pose_publisher.cpp  pose_subscriber.cpp
docker_udp/: Dockerfile
docker_udp/pose_demo/: CMakeLists.txt  package.xml
docker_udp/pose_demo/src/: pose_publisher.cpp
